test/Parser/Class/UnterminatedClassDefMemberList.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:12:1: error: Unexpected type token: END
// CHECK: .loci:12:1: error: Expected 'NAME'; got 'END'.
// CHECK: .loci:12:1: error: Expected 'RROUNDBRACKET'; got 'END'.
// CHECK: .loci:12:1: error: Expected 'LCURLYBRACKET'; got 'END'.
// CHECK: .loci:12:1: error: Expected 'RCURLYBRACKET'; got 'END'.
class TestClass(

// CHECK: 5 errors generated.
